fix(attendance): reduce font boldness and add contrast color for semester title

--- a/src/app/pages/attendance/attendance.page.scss
+++ b/src/app/pages/attendance/attendance.page.scss
@@ -2,6 +2,14 @@ ion-item {
   --highlight-color-valid: transparent;
 }
 
+h3{
+  font-weight: 600;
+}
+
+.semester-title{
+  font-weight: 600;
+}
+
 .h-mobile-d-desktop {
   display: none;
 }
